FAGSYSTEM-385462 endrer uttaksperioder til å ikke regnes som innvilge… (#7425)
FAGSYSTEM-385462 endrer uttaksperioder til å ikke regnes som innvilget gradering hvis det ikke er utbetaling for den graderte aktiviteten